# mlflow-sample

./: README.md  pyproject.toml  pytorch_lightening.py  requirements.txt  sample.py
lightning_logs/version_0/: metrics.csv
mlruns/0/: meta.yaml
mlruns/0/56e0cb64f1214d45a612876cd86cd3ad/: meta.yaml
mlruns/0/56e0cb64f1214d45a612876cd86cd3ad/artifacts/: model_summary.txt
mlruns/0/56e0cb64f1214d45a612876cd86cd3ad/artifacts/model/: MLmodel  conda.yaml  requirements.txt
mlruns/0/56e0cb64f1214d45a612876cd86cd3ad/metrics/: train loss
mlruns/0/56e0cb64f1214d45a612876cd86cd3ad/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
mlruns/0/datasets/6383dd9f3ed9d93a6a4de2c6550c3dbb/: meta.yaml
mlruns/0/datasets/7037ce17f24c88dc685b5d6a4cc0ba02/: meta.yaml
mlruns/0/ea393e58ad0d44ee9b74f0964dc30012/: meta.yaml
mlruns/0/ea393e58ad0d44ee9b74f0964dc30012/artifacts/model/: MLmodel  conda.yaml  model.pkl
mlruns/0/ea393e58ad0d44ee9b74f0964dc30012/inputs/5c40938292cab34d946931e76ea0d3f2/: meta.yaml
mlruns/0/ea393e58ad0d44ee9b74f0964dc30012/metrics/: training_mean_absolute_error  training_mean_squared_error  training_r2_score  training_root_mean_squared_error  training_score
mlruns/0/ea393e58ad0d44ee9b74f0964dc30012/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
mlruns/models/diabete-random-forest-reg-model/: meta.yaml
mlruns/models/diabete-random-forest-reg-model/version-1/: meta.yaml
mlruns/models/pytorch-lightning-sample-model/: meta.yaml
mlruns/models/pytorch-lightning-sample-model/version-1/: meta.yaml
(+2 files in other folders)
