[tool.poetry]
name = "mlflow-sample"
version = "1.0.0"
description = "A repository to workout on mlflow"
authors = ["Matthew <hongnam.wong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.17"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
torch = "^2.0.1"
torchvision = "^0.15.2"
mlflow = "2.5"
lightning = "2.0.0"
torchmetrics = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
